--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 		</div>
 	</div>
 
+	<!-- <img src="./spinner.gif" alt="Loading..." id="loading" class="loading"> -->
+
 <script src="script.js"></script>
 </body>
 </html>
