--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
+	<div class="year" id="year"></div>
 	
 	<div class="year" id="year"></div>
 
@@ -31,7 +32,7 @@
 		</div>
 	</div>
 
-	<!-- <img src="./spinner.gif" alt="Loading..." id="loading" class="loading"> -->
+	<!-- <img src="./assets/spinner2.gif" alt="Loading..." id="loading" class="loading"> -->
 
 <script src="script.js"></script>
 </body>
