--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		</div>
 	</div>
 
-	<!-- <img src="./assets/spinner2.gif" alt="Loading..." id="loading" class="loading"> -->
+	<img src="./assets/s1.gif" alt="Loading..." id="loading" class="loading">
 
 <script src="script.js"></script>
 </body>
